[tool.poetry]
name = "fedi_gatus"
version = "v2.1.2"
description = ""
authors = ["Jesse Schoepfer <jelloeater@gmail.com>"]
readme = "README.md"
#homepage = "https://github.com/Jelloeater/xx"
#keywords = ["hubitat", "makerapi","requests"]
#classifiers = ["Development Status :: 5 - Production/Stable",
# "Environment :: No Input/Output (Daemon)",
# "Topic :: Home Automation",
# "Intended Audience :: Developers",
# "Operating System :: OS Independent",
#]

[tool.poetry.scripts]
gatus_config = "fedi_gatus.__main__:app"

[tool.poetry.dependencies]
python = "~3.11"
typer = "*"
pyyaml = "*"
ruamel-yaml = "*"
peewee = "*"
datetime = "*"
fastapi = "0.96.0"
uvicorn ={version="0.22.0", extras = ["standard"]}
munch = "^4.0.0"
psycopg2-binary = "^2.9.7"
pythonseer = {git = "https://github.com/jelloeater/pythonseer"}
pytest = "^8.3.1"


[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = "test/"
log_cli = true
log_cli_level = "DEBUG"
#log_cli_format = "%(message)s"
log_cli_format = "[%(asctime)s] [%(levelname)8s] --- %(message)s (%(filename)s:%(funcName)s():%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

[tool.flake8]
#ignore = ['E231', 'E241']
exclude =['./tests']
max-line-length = 120
count = false
statistics = true
diff = true
format = "pylint"


[tool.black]
line-length = 120

[tool.isort]
multi_line_output = 3
include_trailing_comma = "True"
force_grid_wrap = 0
use_parentheses = "True"
line_length = 120
profile = "black"

[tool.tartufo]
repo-path = "."
regex = true
entropy = true
exclude-path-patterns = [
 {path-pattern = 'poetry\.lock'},
 {path-pattern = 'pyproject\.toml'},
 # To not have to escape `\` in regexes, use single quoted
 # TOML 'literal strings'
 {path-pattern = 'docs/source/(.*)\.rst'},
 {path-pattern = 'fedi_gatus/config_gen/base.template.yaml'},
]
exclude-entropy-patterns = [
    {path-pattern = '\.github/workflows/.*\.yml', pattern = 'uses: .*@[a-zA-Z0-9]{40}', reason = 'GitHub Actions'},
    {path-pattern = 'poetry\.lock', pattern = '.'},
    {path-pattern = 'Pipfile\.lock', pattern = '.'},
    {path-pattern = 'README\.md', pattern = '.'},
    {path-pattern = 'mapping\.cfg', pattern = '.'}, # Git secret
    {path-pattern = 'techstack\.*', pattern = '.'},
]

[tool.poetry.group.test.dependencies]
setuptools = "*"
pytest = "*"
pytest-cov = "*"
pytest-pycharm = "*"
python-dotenv = "*"
pre-commit = "*"
vulture = "*"
isort = "*"
radon = "*"
xenon = "*"
black = "*"
typing_extensions ="*"
#typeguard ="*" # Typing
#mypy = "*" # Typing
pdoc3 = "*"
pylint = "*"
bandit = "*"
whispers = "*"
flake8 = "*"
Flake8-pyproject="*"
tartufo="*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
